--- a/examples/treeview/treeview-1.html
+++ b/examples/treeview/treeview-1.html
@@ -21,40 +21,102 @@
         <section id="code-ex-1" aria-labelledby="id1">
           <h2 id="tree1">Foods</h2>
           <ul role="tree" aria-labelledby="tree1" >
-            <li role="treeitem" aria-expanded="true" aria-label="Fruits">
+            <li role="treeitem" aria-expanded="false" aria-label="Fruits">
               <span> Fruits</span>
               <ul>
-                <li role="treeitem">Oranges</li>
-                <li role="treeitem">Pineapple</li>
+                <li role="treeitem"> Oranges</li>
+                <li role="treeitem"> Pineapple</li>
                 <li role="treeitem" aria-expanded="false" aria-label="Apples">
                   <span> Apples</span>
                   <ul>
-                    <li role="treeitem">Macintosh</li>
-                    <li role="treeitem">Granny Smith</li>
-                    <li role="treeitem">Fuji</li>
+                    <li role="treeitem"> Macintosh</li>
+                    <li role="treeitem"> Granny Smith</li>
+                    <li role="treeitem"> Fuji</li>
                   </ul>
                 </li>  
                 <li role="treeitem">Bananas</li>    
                 <li role="treeitem"  aria-expanded="false" aria-label="Pears">
                   <span> Pears</span>
                   <ul>
-                    <li role="treeitem">Anjou</li>
-                    <li role="treeitem">Bartlett</li>
-                    <li role="treeitem">Bosc</li>
-                    <li role="treeitem">Concorde</li>
-                    <li role="treeitem">Seckel</li>
-                    <li role="treeitem">Starkrimson</li>
+                    <li role="treeitem"> Anjou</li>
+                    <li role="treeitem"> Bartlett</li>
+                    <li role="treeitem"> Bosc</li>
+                    <li role="treeitem"> Concorde</li>
+                    <li role="treeitem"> Seckel</li>
+                    <li role="treeitem"> Starkrimson</li>
                   </ul>
                 </li>    
               </ul>
             </li>
-          </ul>
+           <li role="treeitem" aria-expanded="false" aria-label="Vegetables">
+              <span>Vegetables</span>
+              <ul>
+                <li role="treeitem" aria-expanded="false" aria-label="Podded Vegetables">
+                  <span> Podded Vegetables</span>
+                  <ul>
+                    <li role="treeitem"> Lentil</li>
+                    <li role="treeitem"> Pea</li>
+                    <li role="treeitem"> Peanut</li>
+                  </ul>
+                </li>  
+                <li role="treeitem"  aria-expanded="false" aria-label="Bulb and Stem Vegetables">
+                  <span>Bulb and Stem Vegetables</span>
+                  <ul>
+                    <li role="treeitem"> Asparagus</li>
+                    <li role="treeitem"> Celery</li>
+                    <li role="treeitem"> Leek</li>
+                    <li role="treeitem"> Onion</li>
+                  </ul>
+                </li>    
+                <li role="treeitem"  aria-expanded="false" aria-label="Root and Tuberous Vegetables">
+                  <span> Root and Tuberous Vegetables</span>
+                  <ul>
+                    <li role="treeitem"> Carrot</li>
+                    <li role="treeitem"> Ginger</li>
+                    <li role="treeitem"> Parsnip</li>
+                    <li role="treeitem"> Patato</li>
+                  </ul>
+                </li>    
+              </ul>
+            </li>
+            <li role="treeitem" aria-expanded="false" aria-label=" Grains">
+              <span><a href="https://en.wikipedia.org/wiki/Grain"> Grains</a></span>
+              <ul>
+                <li role="treeitem" aria-expanded="false" aria-label="Cereal grains">
+                  <span><a href="https://en.wikipedia.org/wiki/Grain#Cereal_grains"> Cereal Grains</a></span>
+                  <ul>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Barley"> Barley</a></li>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Oats"> Oats</a></li>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Rice"> Rice</a></li>
+                  </ul>
+                </li>  
+                <li role="treeitem"  aria-expanded="false" aria-label="Pseudocereal grains">
+                  <span><a href="https://en.wikipedia.org/wiki/Grain#Pseudocereal_grains"> Pseudocereal Grains</a></span>
+                  <ul>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Amaranth"> Amaranth</a></li>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Buckwheat"> Buckwheat</a></li>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Salvia_hispanica"> Chia</a></li>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Quinoa"> Quinoa</a></li>
+                  </ul>
+                </li>    
+                <li role="treeitem"  aria-expanded="false" aria-label="Oilseeds">
+                  <span><a href="https://en.wikipedia.org/wiki/Grain#Oilseeds"> Oilseeds</a></span>
+                  <ul>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Brassica_juncea"> India Mustard</a></li>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Safflower"> Safflower</a></li>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Flax_seed"> Flax Seed</a></li>
+                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Poppy_seed"> Poppy Seed</a></li>
+                  </ul>
+                </li>    
+              </ul>
+            </li>
+          </ul>          </ul>
           <p><label>Last Action: <input id="last_action" type="output" size="15"></label></p>
         </section>
       </div>  
       <section aria-labelledby="id_kbd">
 
-        <h2 id="id_kbd">Keyboard Support</h2>
+        <h2 id="id_kbd">Keyboard Interaction and Focus Management</h2>
       
         <table aria-labelledby="id_kbd"> 
           <thead>
@@ -76,10 +138,10 @@
               <td>Left Arrow Key</td>
               <td>
                 <ul>
-                  <li>For a <code>treeitem</code> that is in the expanded state (e.g. has <code>[aria-expanded=true]</code>) it toogles to the collapsed state.   Focus remains on the current <code>treeitem</code>.</li>
-                  <li>For a <code>treeitem</code> that is in the collapsed state or is not expandable/collapsable, focus moves to the parent <code>treeitem</code>.
-                    If no parent, focus stays on current <code>treeitem</code>.
+                  <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) or is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>), focus moves to the parent <code>treeitem</code>.
+                    If a top level <code>treeitem</code> (e.g. parent is <code>tree</code>), focus stays on current <code>treeitem</code>.
                   </li> 
+                  <li>For a <code>treeitem</code> that is in the expanded state (e.g. has <code>[aria-expanded=true]</code>) it toogles to the collapsed state.   Focus remains on the current <code>treeitem</code>.</li>
                 </ul>
               </td>
             </tr>
@@ -87,7 +149,8 @@
               <td>Right Arrow Key</td>
               <td>
                 <ul>
-                  <li>For a <code>treeitem</code> that is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>) it toogles to the expanded state.   Focus remains on the current <code>treeitem</code>.</li>
+                  <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) focus stays on current <code>treeitem</code>.</li>
+                  <li>For a <code>treeitem</code> that is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>) it toogles to the expanded state and focus moves to the first child <code>treeitem</code>.  If no child, focus stays on current <code>treeitem</code>.</li>
                   <li>For a <code>treeitem</code> is in the expanded state, focus moves to the first child <code>treeitem</code>.
                     If no child, focus stays on current <code>treeitem</code>.
                   </li> 
@@ -104,12 +167,13 @@
             </tr>
             <tr>
               <td>Home Key</td>
-              <td>Moves focus to first sibling of the current <code>treeitem</code>.</td>
+              <td>Moves focus to first <code>treeitem</code> in the <code>tree</code>.</td>
             </tr>
             <tr>
               <td>End Key</td>
-              <td>Moves focus to last sibling of the current <code>treeitem</code>.</td>
-            </tr>          </tbody>
+              <td>Moves focus to last visible <code>treeitem</code> (e.g. depth first) in the <code>tree</code>.</td>
+            </tr>
+          </tbody>
         </table>
 
       </section>    
