fixed bugs in tree formatting

--- a/examples/treeview/treeview-1.html
+++ b/examples/treeview/treeview-1.html
@@ -49,7 +49,7 @@
               </ul>
             </li>
            <li role="treeitem" aria-expanded="false" aria-label="Vegetables">
-              <span>Vegetables</span>
+              <span> Vegetables</span>
               <ul>
                 <li role="treeitem" aria-expanded="false" aria-label="Podded Vegetables">
                   <span> Podded Vegetables</span>
@@ -60,7 +60,7 @@
                   </ul>
                 </li>  
                 <li role="treeitem"  aria-expanded="false" aria-label="Bulb and Stem Vegetables">
-                  <span>Bulb and Stem Vegetables</span>
+                  <span> Bulb and Stem Vegetables</span>
                   <ul>
                     <li role="treeitem"> Asparagus</li>
                     <li role="treeitem"> Celery</li>
@@ -80,32 +80,32 @@
               </ul>
             </li>
             <li role="treeitem" aria-expanded="false" aria-label=" Grains">
-              <span><a href="https://en.wikipedia.org/wiki/Grain"> Grains</a></span>
+              <span> Grains</span>
               <ul>
                 <li role="treeitem" aria-expanded="false" aria-label="Cereal grains">
-                  <span><a href="https://en.wikipedia.org/wiki/Grain#Cereal_grains"> Cereal Grains</a></span>
+                  <span> Cereal Grains</span>
                   <ul>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Barley"> Barley</a></li>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Oats"> Oats</a></li>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Rice"> Rice</a></li>
+                    <li role="treeitem">Barle</li>
+                    <li role="treeitem">Oat</li>
+                    <li role="treeitem">Rice</li>
                   </ul>
                 </li>  
                 <li role="treeitem"  aria-expanded="false" aria-label="Pseudocereal grains">
-                  <span><a href="https://en.wikipedia.org/wiki/Grain#Pseudocereal_grains"> Pseudocereal Grains</a></span>
+                  <span> Pseudocereal Grains</span>
                   <ul>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Amaranth"> Amaranth</a></li>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Buckwheat"> Buckwheat</a></li>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Salvia_hispanica"> Chia</a></li>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Quinoa"> Quinoa</a></li>
+                    <li role="treeitem"> Amaranth</li>
+                    <li role="treeitem"> Buckwheat</li>
+                    <li role="treeitem"> Chia</li>
+                    <li role="treeitem"> Quinoa</li>
                   </ul>
                 </li>    
                 <li role="treeitem"  aria-expanded="false" aria-label="Oilseeds">
-                  <span><a href="https://en.wikipedia.org/wiki/Grain#Oilseeds"> Oilseeds</a></span>
+                  <span> Oilseeds</span>
                   <ul>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Brassica_juncea"> India Mustard</a></li>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Safflower"> Safflower</a></li>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Flax_seed"> Flax Seed</a></li>
-                    <li role="treeitem"><a href="https://en.wikipedia.org/wiki/Poppy_seed"> Poppy Seed</a></li>
+                    <li role="treeitem"> India Mustard</li>
+                    <li role="treeitem"> Safflower</li>
+                    <li role="treeitem"> Flax Seed</li>
+                    <li role="treeitem"> Poppy Seed</li>
                   </ul>
                 </li>    
               </ul>
