update landmark example

--- a/examples/landmarks/HTML5.html
+++ b/examples/landmarks/HTML5.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html >
 <html lang="en">
   <head>
-    <title>General Principles: Principles: ARIA Landmarks Example</title>
+    <title>HTML5 Sectioning Elements: ARIA Landmarks Example</title>
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-theme.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-accessibility.css" rel="stylesheet" media="screen"/>
-    <link href="css/bootstrap-accessibility.css" rel="stylesheet" media="screen"/>
     <link href="css/visua11y.css" rel="stylesheet" media="screen"/>
     <link href="css/common.css" rel="stylesheet" media="screen"/>
-    <script src="js/tabs.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="container">
