--- a/examples/landmarks/at.html
+++ b/examples/landmarks/at.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html >
 <html lang="en">
   <head>
-    <title>General Principles: Principles: ARIA Landmarks Example</title>
+    <title>Assistive Technology: ARIA Landmarks Example</title>
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-theme.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-accessibility.css" rel="stylesheet" media="screen"/>
-    <link href="css/bootstrap-accessibility.css" rel="stylesheet" media="screen"/>
     <link href="css/visua11y.css" rel="stylesheet" media="screen"/>
     <link href="css/common.css" rel="stylesheet" media="screen"/>
-    <script src="js/tabs.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="container">
@@ -28,7 +26,7 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
           <nav>
             <ul class="nav nav-pills nav-stacked">
-              <li class="active"><a href="index.html">Principles</a></li>
+              <li><a href="index.html">Principles</a></li>
               <li><a href="HTML5.html">HTML5</a></li>
               <li><a href="banner.html">Banner</a></li>
               <li><a href="complementary.html">Complementary</a></li>
@@ -38,7 +36,7 @@
               <li><a href="navigation.html">Navigation</a></li>
               <li><a href="region.html">Region</a></li>
               <li><a href="search.html">Search</a></li>
-              <li><a href="at.html" aria-label="Assistive Technology" aria-current="page">Asst. Tech.</a></li>
+              <li class="active"><a href="at.html" aria-label="Assistive Technology" aria-current="page">Asst. Tech.</a></li>
               <li><a href="resources.html">Resources</a></li>
             </ul>
           </nav>
@@ -262,6 +260,7 @@
     </div>
     <script type="text/javascript" src="js/jquery-2.1.1.min.js"></script>        
     <script type="text/javascript" src="js/bootstrap.min.js"></script>        
+    <script type="text/javascript" src="js/tabs.js"></script>        
     <script type="text/javascript" src="js/bootstrap-accessibility.min.js"></script>        
     <script type="text/javascript" src="js/bootstrap-accessibility-2.js"></script>        
     <script type="text/javascript" src="js/visua11y.js"></script>        
