--- a/examples/landmarks/navigation.html
+++ b/examples/landmarks/navigation.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html >
 <html lang="en">
   <head>
-    <title>ARIA Landmark Example: Design Patterns</title>
+    <title>Navigation Landmark: ARIA Landmark Example</title>
     <meta charset="utf-8">
     <link href="css/bootstrap.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-theme.css" rel="stylesheet" media="screen"/>
     <link href="css/bootstrap-accessibility.css" rel="stylesheet" media="screen"/>
-    <link href="css/bootstrap-accessibility.css" rel="stylesheet" media="screen"/>
     <link href="css/visua11y.css" rel="stylesheet" media="screen"/>
     <link href="css/common.css" rel="stylesheet" media="screen"/>
-    <script src="js/tabs.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="container">
@@ -18,7 +16,7 @@
           <img src="images/w3c.png" alt="W3C Logo" />
         </div>
         <div class="col-xs-12 col-sm-9 col-md-9 col-lg-10">
-          <h1>ARIA Landmark Example using HTML5 Sectioning Elements</h1>
+          <h1>ARIA Landmark Example</h1>
           <p id="inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
           <button onclick="showLandmarks(event)" aria-describedby="inst">Show Landmarks</button>
           <button onclick="showHeadings(event)"  aria-describedby="inst">Show Headings</button>
@@ -28,7 +26,7 @@
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-2">
           <nav>
             <ul class="nav nav-pills nav-stacked">
-              <li><a href="index.html">Design Patterns</a></li>
+              <li><a href="index.html">Principles</a></li>
               <li><a href="HTML5.html">HTML5</a></li>
               <li><a href="banner.html">Banner</a></li>
               <li><a href="complementary.html">Complementary</a></li>
@@ -54,7 +52,7 @@
               <li>If a <code>navigation</code> landmark has an identical set of links as another <code>navigation</code> landmark on the page, use the same label for each <code>navigation</code> landmark.</li>
             </ul>
             <section aria-label="Coding Techniques">
-              <ul class="nav nav-tabs" role="tablist">
+              <ul id="myTabs" class="nav nav-tabs" role="tablist">
                 <li class="active"><a id="tab1" href="#tabpanel1" aria-controls="tabpanel1" role="tab" data-toggle="tab">ARIA Techniques</a></li>
                 <li><a id="tab2" href="#tabpanel2" aria-controls="tabpanel2" role="tab" data-toggle="tab">HTML5 Techniques</a></li>
               </ul>
@@ -187,9 +185,6 @@
               <li>Main</li>
               <li>Navigation</li>
             </ul>
-            <p id="highlight_inst" class="inst">Visually outline the landmarks and/or headings on the page using the following buttons.</p>
-            <button onclick="showLandmarks(event)" aria-describedby="highlight_inst">Show Landmarks</button>
-            <button onclick="showHeadings(event)" aria-describedby="highlight_inst">Show Headings</button>
           </aside>
           <aside aria-labelledby="id3">
             <h2 id="id3">Related W3C Specs</h2>
