--- a/examples/treeview/treeview-1.html
+++ b/examples/treeview/treeview-1.html
@@ -193,13 +193,12 @@
           <tbody>
             <tr>
               <td>Up arrow Key</td>
-              <td>Moves focus to previous sibling <code>treeitem</code>. If no previous sibling, focus stays on current <code>treeitem</code>.</td>
+              <td>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</td>
             </tr>
             <tr>
               <td>Down arrow Key</td>
-              <td>Moves focus to next sibling <code>treeitem</code>. If no next sibling, focus stays on current <code>treeitem</code>.</td>
-            </tr>
-            <tr>
+              <td>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</td>
+            </tr>            <tr>
               <td>Left Arrow Key</td>
               <td>
                 <ul>
