--- a/examples/treeview/treeview-2.html
+++ b/examples/treeview/treeview-2.html
@@ -204,11 +204,11 @@
           <tbody>
             <tr>
               <td>Up arrow Key</td>
-              <td>Moves focus to previous sibling <code>treeitem</code>. If no previous sibling, focus stays on current <code>treeitem</code>.</td>
+              <td>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</td>
             </tr>
             <tr>
               <td>Down arrow Key</td>
-              <td>Moves focus to next sibling <code>treeitem</code>. If no next sibling, focus stays on current <code>treeitem</code>.</td>
+              <td>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</td>
             </tr>
             <tr>
               <td>Left Arrow Key</td>
@@ -226,9 +226,8 @@
               <td>
                 <ul>
                   <li>For a <code>treeitem</code> that is an end node (e.g. no child <code>treeitem</code>s) focus stays on current <code>treeitem</code>.</li>
-                  <li>For a <code>treeitem</code> that is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>) it toogles to the expanded state and focus moves to the first child <code>treeitem</code>.  If no child, focus stays on current <code>treeitem</code>.</li>
+                  <li>For a <code>treeitem</code> that is in the collapsed state (e.g. has <code>[aria-expanded=false]</code>) it toogles to the expanded state and focus stays on current <code>treeitem</code>. </li>
                   <li>For a <code>treeitem</code> is in the expanded state, focus moves to the first child <code>treeitem</code>.
-                    If no child, focus stays on current <code>treeitem</code>.
                   </li> 
                 </ul>
               </td>
