--- a/examples/treeview/treeview-3.html
+++ b/examples/treeview/treeview-3.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-    <title>ARIA Tree View using DOM Structure Example: Actions</title>
+    <title>ARIA Tree View Example</title>
     <link href="../css/core.css" rel="stylesheet">
     <link href="../css/table.css" rel="stylesheet">
     <link href="css/treeview.css" rel="stylesheet">
@@ -14,30 +14,22 @@
   </head>
   <body>
     <main>
-      <h1 id="id1">ARIA Tree View using DOM Structure Example: Actions</h1>
+      <h1 id="id1">ARIA Tree View Example: Actions using <code>aria-owns</code></h1>
+      <p>In this example the ARIA parent/child treeview relationships for expandable <code>treeitems</code> (e.g. <code>tree</code>, <code>group</code> and <code>treeitem</code>) are defined using <code>aria-owns</code> attribute.  The <code>aria-owns</code> attribute must be used because the DOM does not represent the parent/chlid relationships.</p>
 
-      <ul>
-        <li>In this example the ARIA treeview relationships (e.g. <code>tree</code>, <code>group</code> and <code>treeitem</code>) are defined in the parent child relationships defined int he DOM structure.</li>
-        <li>Pressing "space" or "enter" will trigger the click event added to each <code>treeitem</code>, which updates the "last action" textbox.</li>
-        <li>Example based on the <a href="https://www.w3.org/TR/wai-aria-practices-1.1/#TreeView">WAI-ARIA 1.1: Tree View authoring practices</a></li>
-      </ul>
-
-
-      <h2 id="ex_title">Example</h2>
-      
-      <section id="example" aria-labelledby="ex_title">  
-
-        <div id="code-ex-1">
-          <h3 id="tree1">Foods</h3>
+        <p><a href="https://www.w3.org/TR/wai-aria-practices-1.1/#TreeView">WAI-ARIA 1.1: Tree View</a></p>
+      <div id="example">  
+        <section id="code-ex-1" aria-labelledby="id1">
+          <h2 id="tree1">Foods</h2>
           <ul role="tree" aria-labelledby="tree1" >
-            <li role="treeitem"
+            <li>
+              <span role="treeitem"
                 aria-level="1" 
                 aria-setsize="3" 
                 aria-posinset="1" 
-                aria-expanded="false" 
-                aria-label="Fruits">
-              <span> Fruits</span>
-              <ul>
+                aria-owns="tv1"
+                aria-expanded="false"> Fruits</span>
+              <ul id="tv1">
                 <li role="treeitem" aria-level="2" aria-setsize="5" aria-posinset="1"> Oranges</li>
                 <li role="treeitem" aria-level="2" aria-setsize="5" aria-posinset="2"> Pineapple</li>
                 <li role="treeitem" 
@@ -72,7 +64,7 @@
                 </li>    
               </ul>
             </li>
-           <li role="treeitem"
+           <li  role="treeitem"
                 aria-level="1" 
                 aria-setsize="3" 
                 aria-posinset="2" 
@@ -163,7 +155,7 @@
                     aria-setsize="3" 
                     aria-posinset="3"
                     aria-expanded="false" 
-                  aria-label="Oilseeds">
+                    aria-label="Oilseeds">
                   <span> Oilseeds</span>
                   <ul>
                     <li role="treeitem" aria-level="3" aria-setsize="4" aria-posinset="1"> India Mustard</li>
@@ -176,9 +168,8 @@
             </li>
           </ul>
           <p><label>Last Action: <input id="last_action" type="output" size="15"></label></p>
-        </div>
-      </section>
-
+        </section>
+      </div>  
       <section aria-labelledby="id_kbd">
 
         <h2 id="id_kbd">Keyboard Interaction and Focus Management</h2>
@@ -193,12 +184,13 @@
           <tbody>
             <tr>
               <td>Up arrow Key</td>
-              <td>Moves focus to previous visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on first <code>treeitem</code>, focus stays on first <code>treeitem</code>.</td>
+              <td>Moves focus to previous sibling <code>treeitem</code>. If no previous sibling, focus stays on current <code>treeitem</code>.</td>
             </tr>
             <tr>
               <td>Down arrow Key</td>
-              <td>Moves focus to next visible sibling <code>treeitem</code> using a depth first algorithm on the visible <code>treeitems</code>. If on last <code>treeitem</code>, focus stays on the last <code>treeitem</code>.</td>
-            </tr>            <tr>
+              <td>Moves focus to next sibling <code>treeitem</code>. If no next sibling, focus stays on current <code>treeitem</code>.</td>
+            </tr>
+            <tr>
               <td>Left Arrow Key</td>
               <td>
                 <ul>
@@ -236,20 +228,6 @@
             <tr>
               <td>End Key</td>
               <td>Moves focus to last visible <code>treeitem</code> (e.g. depth first) in the <code>tree</code>.</td>
-            </tr>
-            <tr>
-              <td>a-z, A-Z</td>
-              <td>
-                <ul>
-                  <li>Moves focus to next visible <code>treeitem</code> that starts with letter character.</li>
-                  <li>Search wraps to first <code>treeitem</code> if not found after current <code>treeitem</code>.</li>
-                </ul>
-              </td>
-            </tr>
-            <tr>
-              <td>*</td>
-              <td>Opens all the expandable <code>treeitem</code>s in the current leaf (e.g. siblings and current <code>treeitem</code>s), keyboard focus does not change.
-              </td>
             </tr>
           </tbody>
         </table>
@@ -373,7 +351,12 @@
             <tr>
               <td>[role=treeitem]</td>
               <td>0 or -1</td>
-              <td>The <code>treeitem</code> with the current focus should have <code>tabindex=0</code>, all other <code>treeitem</code>s should have a tabindex value of -1.</td>
+              <td>The <code>treeitem</code> with the current focus should have tabindex=0, all other <code>treeitem</code>s should have a tabindex value of -1.</td>
+            </tr>
+            <tr>
+              <td>[role=treeitem] a</td>
+              <td>-1</td>
+              <td>Remove any links that are descendants of a <code>treeitem</code> from the default tab order of the page by changing tabindex value to -1 (e.g. the default value for a link is 0).</td>
             </tr>
           </tbody>
         </table>
@@ -394,27 +377,12 @@
           <tbody>
             <tr>
               <td>keydown</td>
-              <td>[role=treeitem]</td>
-              <td>
-                <ul>
-                  <li>A <code>keydown</code> event listener is added to each element with <code>role=treeitem</code> to support moving focus between the <code>treeitem</code> with the keyboard.</li>
-                  <li>The <code>keydown</code> event listener is useful for identifying the key codes associated with the <kbd>Left</kbd>, <kbd>Right</kbd>, <kbd>Up</kbd>, <kbd>Down</kbd>, <kbd>Home</kbd>, <kbd>End</kbd>, <kbd>Enter</kbd> and <kbd>space</kbd> keys.</li>
-                </ul>  
-              </td>
-            </tr>
-            <tr>
-              <td>keypress</td>
-              <td>[role=treeitem]</td>
-              <td>
-                <ul>
-                  <li>A <code>keypress</code> event listener is added to each element with <code>role=treeitem</code> to support moving focus between the <code>treeitem</code> with the keyboard.</li>
-                  <li>The <code>keypress</code> event listener is useful for identifying the characters associated with the <kbd>a-z</kbd>, <kbd>A-Z</kbd> and <kbd>*</kbd> when typed by the user, since the <code>keypress</code> event computes a character based on the combination of the keys typed by the user.</li>
-                </ul>
-              </td>
+              <td><code>[role=treeitem]</code></td>
+              <td>A <code>keydown</code> event listener is added to each element with <code>role=treeitem</code> to support moving focus between the <code>treeitem</code> with the keyboard.</td>
             </tr>
             <tr>
               <td>click</td>
-              <td>[role=treeitem][aria-expanded]</td>
+              <td><code>[role=treeitem][aria-expanded]</code></td>
               <td>
                 <ul>
                   <li>Click event listener is added to each element with <code>role=treeitem</code> and <code>aria-expanded</code> to support opening and closing a branch of the tree with the mouse.</li>
@@ -424,12 +392,12 @@
             </tr>
             <tr>
               <td>focus</td>
-              <td>[role=treeitem]</td>
+              <td><code>[role=treeitem]</code></td>
               <td>Focus event listener is added to each element with <code>role=treeitem</code> to support visual styling of the <code>treeitem</code> when it recieves focus.</td>
             </tr>
             <tr>
               <td>blur</td>
-              <td>[role=treeitem]</td>
+              <td><code>[role=treeitem]</code></td>
               <td>Blur event listener is added to each element with <code>role=treeitem</code> to support visual styling of the <code>treeitem</code> when it does not have focus.</td>
             </tr>
           </tbody>
@@ -474,34 +442,6 @@
         </table>
 
       </section>
-
-      <section aria-labelledby="id_sync">
-      
-        <h2 id="id_sync">Synchronization of Visual and ARIA States</h2>
-
-        <table aria-labelledby="id_sync"> 
-          <thead>
-            <tr>
-              <th style="min-width: 8em;" title="Element Selector">Elements</th>
-              <th>Description</th>
-            </tr>
-          </thead>
-          <tbody>
-            <tr>
-              <td>[role=treeitem][aria-expanded]</td>
-              <td>
-                <ul>
-                  <li>The <code>:before</code> psuedo selector for <code>[aria-expanded=false]</code> and <code>[aria-expanded=true]</code> are used to change a <code>content</code> property.</li>
-                  <li>The image source defined in the <code>content</code> property is used for visually indicating the expanded and collapsed states of an expandable <code>treeitem</code>.</li>
-                  <li>The <code>content</code> property is preferred since it supports rendering of the image in high contrast settings of browsers and operating systems.  Other CSS techniques like <code>background-image</code> are not supported in high contrast modes.</li> 
-                </ul>  
-              </td>
-            </tr>
-          </tbody>
-        </table>
-
-      </section>
-
 
      <section aria-labelledby="sc-ex1">
         <h2 id="sc-ex1">Source Code: Example</h2>
