--- a/examples/treeview/treeview-2.html
+++ b/examples/treeview/treeview-2.html
@@ -409,6 +409,8 @@
           </thead>
           <tbody>
             <tr>
+              <td>keydown</td>
+              <td>[role=treeitem]</td>
               <td>
                 <ul>
                   <li>A <code>keydown</code> event listener is added to each element with <code>role=treeitem</code> to support moving focus between the <code>treeitem</code> with the keyboard.</li>
