Update tree view example

--- a/examples/treeview/treeview-2.html
+++ b/examples/treeview/treeview-2.html
@@ -13,6 +13,16 @@
 
   </head>
   <body>
+    <header>
+      <h1>ARIA Tree View Examples</h1>
+    </header>
+    <nav>
+      <ul>
+        <li><a href="treeviews.html">Overview</a></li>
+        <li><a href="treeview-1.html">Example 1</a></li>
+        <li class="active"><a href="treeview-2.html">Example 2</a></li>
+      </ul>
+    </nav>
     <main>
 
       <h1 id="id1">ARIA Tree View using DOM Structure Example: Links</h1>
