On branch grid, modified:   aria-practices.html. Fixes to section structure in grid section.

--- a/aria-practices.html
+++ b/aria-practices.html
@@ -1498,9 +1498,9 @@
                 <p>
                 A <a href="#grid" class="role-reference">grid</a> widget is a container that enables users to navigate the information or interactive elements it contains using the arrow keys.
                 It may be used for purposes as simple as grouping a collection of checkboxes or navigation links or as complex as creating a full-featured spreadsheet application.
-                While assistive technologies present the logical structure of elements with the <code>grid</code> role using row and column nomenclature, using the <code>grid</code> role does not necessarily imply the visual presentation is tabular.
+                While assistive technologies present the logical structure of elements with the <code>grid</code> role using row and column nomenclature, using the <code>grid</code> role does not necessarily imply that the visual presentation of the element is tabular.
                 </p>
-                <p> When content is tabular, consider the following factors when deciding whether to implement a a <a href="#grid" class="role-reference">grid</a> widget or use a <a href="#table" class="role-reference">table</a> structure.</p>
+                <p> When deciding what type of container to use for content that is tabular, consider the following factors when choosing between implementing a <a href="#grid" class="role-reference">grid</a> widget or using a <a href="#table" class="role-reference">table</a> structure.</p>
                 <ul>
                 <li>A <code>grid</code> is a composite widget so it:
                 <ul>
@@ -1511,7 +1511,6 @@
                 </li>
                 <li>If a <code>table</code> contains focusable elements, each of those elements is in the tab sequence. </li>
                 </ul>
-                <section class="notoc">
                 <section id="dataGrid" class="notoc">
                 <h4>Data Grid</h4>
                 <p>
@@ -1522,7 +1521,6 @@
                 Every data cell in a grid is focusable. 
                 And, if the headers, the cells containing column or row titles,  provide functionality, such as sort or filter, they are also focusable. 
                 </p>
-                </section>
                 <section class="notoc">
         <h5>Keyboard Interaction</h5>
         <p>There are two modes of keyboard interaction: navigation mode and actionable mode.</p>
